fix(product): complete truncated ProductServiceImpl, fix category subtree paths
- Complete toCardPagedResponse() that was cut mid-line (orElse(null) onward)
- Add loadActiveProductCards(List<UUID>) reusing full batch-loading logic
  (media, variants, stock, shop, categoryPath) with caller-order preserved
- Add resolveCategoryPaths(List<UUID>) as a single batch query instead of
  N individual resolveCategory() calls
- Add V16 migration: rebuild category.path as hierarchical 'Parent/Child'
  using a recursive CTE; V13 had backfilled path=name so subtree browse
  via LIKE 'Electronics/%' returned empty results for all subcategories
- Fix HomepageAndCategoryBrowseIT test data to use correct hierarchical paths